--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="g-footer">
-  <section>{{ site.title }} ©
+  <section>kemal akın ©
   {% assign current = "now" | date: "%Y" | plus: 0%}
   {% unless site.footer.since and site.footer.since == current %}
     {{ site.footer.since }}
@@ -7,5 +7,7 @@
   {% endunless %}
   {{ current }}
   </section>
-  <section>Powered by <a href="//jekyllrb.com">Jekyll</a> | <a href="https://github.com/kaeyleo/jekyll-theme-H2O">Theme H2O</a></section>
+  <section>powered by <a href="//jekyllrb.com">jekyll</a> and <a href="https://github.com/kaeyleo/jekyll-theme-H2O">H2O</a> theme used</section>
+<section>❤️ <a href="https://rubyonrails.org/">ruby on rails</a></section>
+  
 </footer>
